...
            "value" : "Tastaturdaten hinzufügen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Download keyboard data"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Descargar datos del teclado"
...
            "value" : "Daten herunterladen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Download data"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Descargar datos"
...
            "value" : "Schnelltutorial"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Quick tutorial"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Tutorial rápido"
...
            "value" : "Tastaturinstallation"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Keyboard installation"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Instalación del teclado"
...
            "value" : "ইনস্টলেশন"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Installation"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "",
            "value" : "Installation"
...
