...

        navigationController?.setNavigationBarHidden(true, animated: false)
        edgesForExtendedLayout = .all
        extendedLayoutIncludesOpaqueBars = true

        tabBarController?.viewControllers?[0].title = NSLocalizedString(
            "i18n.app.installation.title", value: "Installation", comment: ""
        )
        tabBarController?.viewControllers?[1].title = NSLocalizedString(
            "i18n.app.settings.title", value: "Settings", comment: ""
        )
        tabBarController?.viewControllers?[2].title = NSLocalizedString(
            "i18n.app.about.title", value: "About", comment: ""
        )

        setCurrentUI()
        showTipCardView()
        showDownloadButton()
        showCTAButton()
...
